@@ -1,0 +1,9 @@
+Externs
+-js bin/externs.js
+
+--next
+
+-main Main
+-js bin/test.js
+
+--cmd node bin/test.js
