@@ -3,6 +3,7 @@
 	Bugfixes:
 
 	all : added `contains` and `keyValueIterator` methods to haxe.ds.ReadOnlyArray
+	all : fixed super constructor call when extending externs (#7837, #9501)
 	display : fixed completion for out-of-bounds argument in a call (#9435)
 	display : fixed "find references" through interfaces (#9470)
 	macro : fixed type intersection syntax in macro reification (#9404)
